@@ -375,19 +375,29 @@ class Parser:
                 rest = pe.rest[len(pe.node):]
                 i = reentry_point(rest, rules, grammar.comment_rx__)
                 if i >= 0 or self == grammar.start_parser__:
+                    assert pe.node.children or (not pe.node.result)
                     # apply reentry-rule or catch error at root-parser
                     if i < 0:
                         i = 1
-                    nd = Node(ZOMBIE_TAG, rest[:i]).with_pos(location)
-                    nd.attr['err'] = pe.error.message
+                    try:
+                        zombie = pe.node[ZOMBIE_TAG]
+                    except KeyError:
+                        zombie = None
+                    if zombie and not zombie.result:
+                        zombie.result = rest[:i]
+                        tail = tuple()
+                    else:
+                        nd = Node(ZOMBIE_TAG, rest[:i]).with_pos(location)
+                        nd.attr['err'] = pe.error.message
+                        tail = (nd,)
                     rest = rest[i:]
-                    assert pe.node.children or (not pe.node.result)
                     if pe.first_throw:
                         node = pe.node
-                        node.result = node.children + (nd,)
+                        node.result = node.children + tail
                     else:
-                        node = Node(self.tag_name,
-                                    (Node(ZOMBIE_TAG, text[:gap]).with_pos(location), pe.node, nd))
+                        node = Node(
+                            self.tag_name,
+                            (Node(ZOMBIE_TAG, text[:gap]).with_pos(location), pe.node) + tail)
                 elif pe.first_throw:
                     raise ParserError(pe.node, pe.rest, pe.error, first_throw=False)
                 elif grammar.tree__.errors[-1].code == Error.MANDATORY_CONTINUATION_AT_EOF:
@@ -398,7 +408,6 @@ class Parser:
                     raise ParserError(Node(self.tag_name, result).with_pos(location),
                                       text, pe.error, first_throw=False)
                 error = pe.error  # needed for history tracking
-
 
             if left_recursion_depth__:
                 self.recursion_counter[location] -= 1
@@ -1098,9 +1107,6 @@ class Grammar:
                         h = HistoryRecord([], None, StringView(''), (0, 0))
                     if h.status == h.MATCH and (h.node.pos + len(h.node) == len(self.document__)):
                         # TODO: this case still needs unit-tests and support in testing.py
-                        for j in self.history__:
-                            print(j)
-                        print(h); print()
                         error_msg = "Parser stopped before end, but matched with lookahead."
                         error_code = Error.PARSER_LOOKAHEAD_MATCH_ONLY
                         max_parser_dropouts = -1  # no further retries!
