@@ -1,6 +1,9 @@
 DHParser Version 0.9.1
 ......................
 
+- added support for tag-less parsers: i.e. parser that are assigned to a
+  symbol with leading underscore will be treated as anonymous parsers
+- resuming after an error does not jump in to commentaries, any more (bugfix!)
 
 
 DHParser Version 0.9.0 (20.10.2019)
